--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <selenium.version>4.10.0</selenium.version>
         <apache.poi.version>5.2.2</apache.poi.version>
         <log4j.version>2.20.0</log4j.version>
+        <surefire.version>3.1.2</surefire.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
@@ -144,7 +145,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.1.2</version>
+                        <version>${surefire.version}</version>
                         <configuration>
                             <suiteXmlFiles>
                                 <suiteXmlFile>regression_testing_chrome.xml</suiteXmlFile>
@@ -161,6 +162,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${surefire.version}</version>
                         <configuration>
                             <suiteXmlFiles>
                                 <suiteXmlFile>regression_testing_firefox.xml</suiteXmlFile>
