--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
             <version>${log4j.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.3.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
             <version>4.0.9</version>
@@ -166,6 +173,23 @@
                         <configuration>
                             <suiteXmlFiles>
                                 <suiteXmlFile>src\test\resources\regression_testing_firefox.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>EdgeAutomation</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${surefire.version}</version>
+                        <configuration>
+                            <suiteXmlFiles>
+                                <suiteXmlFile>src\test\resources\regression_testing_edge.xml</suiteXmlFile>
                             </suiteXmlFiles>
                         </configuration>
                     </plugin>
